# pg_grpc

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  pg_grpc.control  pr_51_review.md  release.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: audit.yml  claude-review.yml  docs.yml  release.yml  test.yml
docs/: demo.tape
src/: async_schema.rs  call.rs  channel_cache.rs  endpoint.rs  error.rs  guc.rs  lib.rs  options.rs  proto.rs  proto_registry.rs  proto_staging.rs  queue.rs  registry.rs  shmem.rs  tls.rs  worker.rs
src/tests/: call.rs  call_async.rs  channel_cache.rs  compile.rs  endpoint.rs  guc.rs  list.rs  mod.rs  options.rs  queue.rs  registry.rs  staging.rs  tls.rs  worker.rs
tests/pg_regress/sql/: setup.sql
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/docs/: installation.md  installation.mdx  introduction.md  quickstart.md  reference.md
website/docs/guides/: async-calls.md  large-messages.md  recipes.md  tls-and-mtls.md  user-supplied-protos.md
website/src/components/Hero/: Hero.module.css  Hero.tsx
website/src/css/: custom.css
website/src/pages/: index.tsx
website/static/: llms-full.txt  llms.txt  skill.md
