[package]
name = "pg_grpc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_grpc"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg13"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18" ]
pg_test = []

[dependencies]
pgrx        = "=0.17.0"
serde_json  = "1"

# gRPC transport
tonic             = { version = "0.12", features = ["transport"] }
tonic-reflection  = "0.12"

# Protobuf encode/decode + dynamic reflection
prost         = "0.13"
prost-types   = "0.13"
prost-reflect = { version = "0.14", features = ["serde"] }
serde         = "1"

# Async runtime (one per SQL call — never stored globally)
tokio = { version = "1", features = ["rt", "net", "time"] }

# Error handling
thiserror = "1"

# Stream helper for reflection bidirectional RPC
futures = { version = "0.3", default-features = false, features = ["std"] }

# Raw HTTP types for dynamic gRPC path
http = "1"
bytes = "1"

[dev-dependencies]
pgrx-tests = "=0.17.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
