[package]
name         = "pg_grpc"
version      = "0.3.0"
edition      = "2021"
rust-version = "1.95"
authors      = ["CSenshi"]
description = "PostgreSQL extension for making gRPC calls from SQL, with reflection or user-supplied .proto files."
license     = "MIT"
repository  = "https://github.com/CSenshi/pg_grpc"
homepage    = "https://github.com/CSenshi/pg_grpc"
readme      = "README.md"
keywords    = ["postgres", "grpc", "extension", "pgrx", "protobuf"]
categories  = ["database", "api-bindings"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg13"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18" ]
pg_test = []

[dependencies]
pgrx        = "=0.18.0"
serde_json  = "1"

# gRPC transport
tonic             = { version = "0.14", default-features = false, features = ["channel", "codegen"] }
tonic-reflection  = { version = "0.14", default-features = false }

# Protobuf encode/decode + dynamic reflection
prost         = "0.14"
prost-types   = "0.14"
prost-reflect = { version = "0.16", features = ["serde"] }
serde         = "1"

# Async runtime (one per SQL call — never stored globally)
tokio = { version = "1", features = ["rt", "net", "time"] }

# Error handling
thiserror = "2"

# Process-global caches (channel + proto descriptor pools)
parking_lot = "0.12"

# Pure-Rust proto compiler for user-supplied .proto source
protox = "0.9"

# Stream helper for reflection bidirectional RPC
futures = { version = "0.3", default-features = false, features = ["std"] }

# Raw HTTP types for dynamic gRPC path
http = "1"
bytes = "1"

[dev-dependencies]
pgrx-tests = "=0.18.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
